fix: test case name overflows

--- a/frontend/src/components/SingleExampleEvaluation/AppSidenav/AppSidenav.module.scss
+++ b/frontend/src/components/SingleExampleEvaluation/AppSidenav/AppSidenav.module.scss
@@ -13,23 +13,6 @@
   border-right: 1px solid $border-subtle;
 }
 
-.itemBtn {
-  position: relative;
-  padding-left: rem(13px);
-  padding-right: rem(13px);
-
-  &.selected::after {
-    content: '';
-    position: absolute;
-    top: -1px;
-    right: 0;
-    bottom: -1px;
-    left: -1px;
-    width: 100%;
-    border-left: 4px solid $border-interactive;
-  }
-}
-
 .panel {
   border-right: 1px solid $border-subtle;
   overflow: hidden;
